Port to Minecraft 1.21.10